<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Application-wide Strings -->
    <string name="app_name">StatusBar+</string>
	<string name="window_title">StatusBarPlus</string>
	<string name="version_name">alpha seven</string>
	<string name="service_started">StatusBar+</string>
	<string name="bar_service">StatusBar+</string>
	<string name="notification_marquee">Select to toggle the custom status bar</string>
	<string name="icon_color">Notification icon color</string>
	<string name="background_color">Background color</string>
	<string name="boot_preference">Set on boot</string>
	<string name="change_button">Change</string>
	<string name="cancel_button">Cancel</string>
	<string name="expand_preference">Automatically disable expansion in lockscreen</string>
	<string name="drop_preference">Click to drop (disable to always display icons)</string>
	<string name="toggle_icons">Hide/ show icons</string>
	<string name="autohide_preference">Auto-hide for specific applications</string>
	<string name="toggle_apps">Choose applications</string>
	<string name="swipe_preference">Swipe to display system notifications</string>
	
	<!-- Change log -->
    <string name="changelog_title_full">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok">OK</string>

	<!-- Pivot Headers -->
	<string name="settings">settings</string>
	<string name="about">about</string>

	<!-- Main Description of App -->
	<string name="description"><b>StatusBar+</b> is the <i>first</i> custom status bar for any Android device done WP7 style, no root required. <u>If you only see time</u> this is not a bug: click the status bar to see the other indicators drop. Alternatively this can be disabled by unchecking \"Click to drop.\" Then all indicators will always remain visible.\nIf you like this application please <a href="https://market.android.com/details?id=com.tombarrasso.android.wp7bar">rate it</a>.\n\nFor more information visit our <a href="http://sevenplusandroid.org">website</a>.\n\nCopyright 2011 <a href="mailto:tbarrasso@sevenplusandroid.org">Thomas James Barrasso</a></string>

	<!-- Order Matters! -->
	<string-array name="icons">
		<item>Signal</item>
		<item>Data</item>
		<item>Carrier</item>
		<item>Roaming</item>
		<item>Wifi</item>
		<item>Bluetooth</item>
		<item>Ringer</item>
		<item>Language</item>
		<item>Battery Percent</item>
		<item>Battery</item>
		<item>Time</item>
	</string-array>

	<string name="drop_choice">Icon drop duration</string>
	<!-- Durations for how long to drop the icons. -->
	<string-array name="drop_times">
		<item>5s</item>
		<item>8s</item>
		<item>10s</item>
		<item>15s</item>
		<item>20s</item>
		<item>30s</item>
	</string-array>

	<!-- Time, in seconds, for how long to drop the icons. -->
	<integer-array name="drop_durations">
		<item>5</item>
		<item>8</item>
		<item>10</item>
		<item>15</item>
		<item>20</item>
		<item>30</item>
	</integer-array>
</resources>
