<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:wp="http://schemas.tombarrasso.com/wp7ui"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:id="@id/root">

	<LinearLayout
		android:padding="12dp"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">

		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingTop="8dp"
			android:paddingBottom="8dp">

			<!-- Left Description -->
			<com.tombarrasso.android.wp7ui.widget.WPTextView
				android:text="@string/notification_marquee"
				android:layout_width="fill_parent"
		   	    android:layout_height="wrap_content"
				android:textColor="@android:color/white"
				android:textSize="22dp"
				android:layout_marginRight="42dp"
				android:layout_alignParentLeft="true" />

			<!-- Right Toggle Switch -->
			<com.tombarrasso.android.wp7ui.widget.WPCheckBox
				android:id="@id/enable_toggle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				wp:backgroundColor="#1F1F1F"
				android:layout_alignParentRight="true" />
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingTop="8dp"
			android:paddingBottom="8dp">

			<!-- Left Description -->
			<com.tombarrasso.android.wp7ui.widget.WPTextView
				android:text="@string/boot_preference"
				android:layout_width="fill_parent"
		   	    android:layout_height="wrap_content"
				android:textColor="@android:color/white"
				android:textSize="22dp"
				android:layout_marginRight="42dp"
				android:layout_alignParentLeft="true" />

			<!-- Right Toggle Switch -->
			<com.tombarrasso.android.wp7ui.widget.WPCheckBox
				android:id="@id/boot_toggle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				wp:backgroundColor="#1F1F1F"
				android:layout_alignParentRight="true" />
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingTop="8dp"
			android:paddingBottom="8dp">

			<!-- Left Description -->
			<com.tombarrasso.android.wp7ui.widget.WPTextView
				android:text="@string/expand_preference"
				android:layout_width="fill_parent"
		   	    android:layout_height="wrap_content"
				android:textColor="@android:color/white"
				android:textSize="22dp"
				android:layout_marginRight="42dp"
				android:layout_alignParentLeft="true" />

			<!-- Right Toggle Switch -->
			<com.tombarrasso.android.wp7ui.widget.WPCheckBox
				android:id="@id/expand_toggle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				wp:backgroundColor="#1F1F1F"
				android:layout_alignParentRight="true" />
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingTop="8dp"
			android:paddingBottom="8dp">

			<!-- Left Description -->
			<com.tombarrasso.android.wp7ui.widget.WPTextView
				android:text="@string/drop_preference"
				android:layout_width="fill_parent"
		   	    android:layout_height="wrap_content"
				android:textColor="@android:color/white"
				android:textSize="22dp"
				android:layout_marginRight="42dp"
				android:layout_alignParentLeft="true" />

			<!-- Right Toggle Switch -->
			<com.tombarrasso.android.wp7ui.widget.WPCheckBox
				android:id="@id/drop_toggle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				wp:backgroundColor="#1F1F1F"
				android:layout_alignParentRight="true" />
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingTop="8dp"
			android:paddingBottom="8dp">

			<!-- Left Description -->
			<com.tombarrasso.android.wp7ui.widget.WPTextView
				android:text="@string/swipe_preference"
				android:layout_width="fill_parent"
		   	    android:layout_height="wrap_content"
				android:textColor="@android:color/white"
				android:textSize="22dp"
				android:layout_marginRight="42dp"
				android:layout_alignParentLeft="true" />

			<!-- Right Toggle Switch -->
			<com.tombarrasso.android.wp7ui.widget.WPCheckBox
				android:id="@id/swipe_toggle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				wp:backgroundColor="#1F1F1F"
				android:layout_alignParentRight="true" />
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingTop="8dp"
			android:paddingBottom="8dp"
			android:paddingRight="16dp"
			android:id="@id/icon_color_preference">

			<!-- Left Description -->
			<com.tombarrasso.android.wp7ui.widget.WPTextView
				android:text="@string/icon_color"
				android:layout_width="fill_parent"
		   	    android:layout_height="wrap_content"
				android:textColor="@android:color/white"
				android:textSize="22dp"
				android:layout_marginRight="32dp"
				android:layout_alignParentLeft="true" />

			<!-- Right Toggle Switch -->
			<View
				android:id="@id/icon_pref"
				android:background="@android:color/white"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:layout_alignParentRight="true" />
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingTop="8dp"
			android:paddingBottom="8dp"
			android:paddingRight="16dp"
			android:id="@id/background_color_preference">

			<!-- Left Description -->
			<com.tombarrasso.android.wp7ui.widget.WPTextView
				android:text="@string/background_color"
				android:layout_width="fill_parent"
		   	    android:layout_height="wrap_content"
				android:textColor="@android:color/white"
				android:textSize="22dp"
				android:layout_marginRight="32dp"
				android:layout_alignParentLeft="true" />

			<!-- Right Toggle Switch -->
			<View
				android:id="@id/background_pref"
				android:background="@android:color/black"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:layout_alignParentRight="true" />
		</RelativeLayout>

		<com.tombarrasso.android.wp7ui.widget.WPButtonView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/toggle_icons"
			android:id="@id/icon_toggle"
			android:textSize="22dp"
			android:layout_marginTop="12dp" />

		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingTop="16dp"
			android:paddingBottom="8dp">

			<!-- Left Description -->
			<com.tombarrasso.android.wp7ui.widget.WPTextView
				android:text="@string/autohide_preference"
				android:layout_width="fill_parent"
		   	    android:layout_height="wrap_content"
				android:textColor="@android:color/white"
				android:textSize="22dp"
				android:layout_marginRight="42dp"
				android:layout_alignParentLeft="true" />

			<!-- Right Toggle Switch -->
			<com.tombarrasso.android.wp7ui.widget.WPCheckBox
				android:id="@id/hide_toggle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				wp:backgroundColor="#1F1F1F"
				android:layout_alignParentRight="true" />
		</RelativeLayout>

		<com.tombarrasso.android.wp7ui.widget.WPButtonView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/toggle_apps"
			android:id="@id/apps_toggle"
			android:textSize="22dp"
			android:layout_marginTop="12dp" />

	</LinearLayout>
</ScrollView>
